@@ -3162,8 +3162,7 @@ part
     id               = "m164p";
     desc             = "ATMEGA164P";
     has_jtag         = yes;
-#   stk500_devcode   = 0x82; # no STK500v1 support
-#   avr910_devcode   = 0x?;  # try the ATmega16 one:^
+    stk500_devcode   = 0x82; # no STK500v1 support, use the ATmega16 one
     avr910_devcode   = 0x74;
     signature        = 0x1e 0x94 0x0a;
     pagel            = 0xd7;
@@ -3354,8 +3353,7 @@ part
     id               = "m324p";
     desc             = "ATMEGA324P";
     has_jtag         = yes;
-#   stk500_devcode   = 0x82; # no STK500v1 support
-#   avr910_devcode   = 0x?;  # try the ATmega16 one:^
+    stk500_devcode   = 0x82; # no STK500v1 support, use the ATmega16 one
     avr910_devcode   = 0x74;
     signature        = 0x1e 0x95 0x08;
     pagel            = 0xd7;
@@ -3546,8 +3544,7 @@ part
     id               = "m644";
     desc             = "ATMEGA644";
     has_jtag         = yes;
-#   stk500_devcode   = 0x82; # no STK500v1 support
-#   avr910_devcode   = 0x?;  # try the ATmega16 one:^
+    stk500_devcode   = 0x82; # no STK500v1 support, use the ATmega16 one
     avr910_devcode   = 0x74;
     signature        = 0x1e 0x96 0x09;
     pagel            = 0xd7;
@@ -3737,8 +3734,7 @@ part
     id               = "m644p";
     desc             = "ATMEGA644P";
     has_jtag         = yes;
-#   stk500_devcode   = 0x82; # no STK500v1 support
-#   avr910_devcode   = 0x?;  # try the ATmega16 one:^
+    stk500_devcode   = 0x82; # no STK500v1 support, use the ATmega16 one
     avr910_devcode   = 0x74;
     signature        = 0x1e 0x96 0x0a;
     pagel            = 0xd7;
